--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Zac Fishbein's Portfolio</title>
+		<link rel="stylesheet" href="styles.css">
+	</head>
+	<body>
+		<h1 text-align: center>Page Currently Under Construction</h1>
+	</body>
+</html>
